fix: fix gap between navbar and signup_form

--- a/static_devs/css/users/signup_mobile.css
+++ b/static_devs/css/users/signup_mobile.css
@@ -8,6 +8,7 @@
 
     #signup_form{
         width: 100%;
+        margin-top: 0;
     }
     #signup-title{
         margin-top: 6rem;
